# rovingbandit

./: .gitignore  README.md  SPEC.md  pyproject.toml
docs/: algorithms.md  api_reference.md
examples/: basic_usage.py
src/rovingbandit/: __init__.py  banditry.py
src/rovingbandit/core/: __init__.py  environment.py  objective.py  policy.py  result.py
src/rovingbandit/objectives/: __init__.py  best_arm_identification.py  regret_minimization.py  variance_minimization.py
src/rovingbandit/policies/: __init__.py  budgeted_thompson.py  budgeted_ucb.py  epsilon_greedy.py  epsilon_neyman.py  explore_first.py  greedy.py  kasy_sautmann.py  linucb.py  lucb.py  random_policy.py  representation_bandit.py  thompson_sampling.py  top_two_thompson.py  ucb.py
src/rovingbandit/runners/: __init__.py  batched.py  online.py
tests/: __init__.py  test_basic.py  test_legacy.py
