[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rovingbandit"
version = "0.1.0"
description = "A flexible library for multi-armed bandit algorithms supporting regret minimization, best-arm identification, and variance minimization"
readme = "SPEC.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Apoorva Lal"}
]
keywords = [
    "bandits",
    "multi-armed-bandits",
    "reinforcement-learning",
    "experimental-design",
    "thompson-sampling",
    "ucb",
    "adaptive-experiments"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "rovingbandit[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/apoorvalal/rovingbandit"
Documentation = "https://github.com/apoorvalal/rovingbandit"
Repository = "https://github.com/apoorvalal/rovingbandit"

[tool.hatch.build.targets.wheel]
packages = ["src/rovingbandit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=rovingbandit",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
